--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -109,6 +109,10 @@
   margin-left: 0.5rem;
 }
 
+.component-preview-box {
+  padding: 100px;
+}
+
 @media (max-width: 600px) {
   .grid {
     width: 100%;
